Page MenuHome GnuPG

Kleopatra: Disable unusable actions in certificate details for remote keys
Closed, ResolvedPublic

Description

The certificate details dialog allows all kinds of actions for keys that are the result of a remote lookup. Many of these actions will either fail or show incomplete data. Those actions should be disabled.

Event Timeline

ikloecker triaged this task as Normal priority.Sep 13 2022, 9:59 AM
ikloecker created this task.
ikloecker added projects: kleopatra, Restricted Project.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Sep 13 2022, 11:31 AM
ikloecker removed ikloecker as the assignee of this task.
ikloecker added a project: Restricted Project.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

If the certificate details are opened from the Lookup on Server dialog for OpenPGP keys that are not already present in the local key ring, then all buttons and context menu entries that don't make sense should be disabled or hidden. Information that cannot
be determined for remote keys (e.g. the expiration date of keys looked up on keyservers) should be hidden or displayed as
"unknown".

For the result of a WKD lookup the information about subkeys seems to be valid (probably because GpgME lists the public key data retrieved via WKD), but I still chose to hide the corresponding button to make it more consistent with other lookup results.

werner removed a project: Restricted Project.Sep 22 2022, 10:40 AM
aheinecke claimed this task.
aheinecke added a subscriber: aheinecke.

Tested and there are no available actions. Works.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Nov 15 2023, 11:06 AM