Add helper for checking whether a key is a remote key

The helper can be used to disable or hide certain actions that do not
make sense for remote keys.

GnuPG-bug-id: 6201